--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "module": "^1.2.5",
+    "monaco-editor": "0.20.0",
+    "require-from-string": "^2.0.2",
+    "solc-js": "^1.0.1",
+    "solc-wrapper": "^0.6.3",
+    "string_decoder": "^1.3.0",
     "vue": "^2.6.11"
   },
   "devDependencies": {
@@ -18,6 +24,7 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "monaco-editor-webpack-plugin": "^1.9.0",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
