--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "solc-js": "^1.0.1",
     "solc-wrapper": "^0.6.3",
     "string_decoder": "^1.3.0",
+    "view-design": "^4.0.0",
     "vue": "^2.6.11"
   },
   "devDependencies": {
@@ -25,6 +26,7 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "monaco-editor-webpack-plugin": "^1.9.0",
+    "vue-cli-plugin-iview": "~2.0.0",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
