--- a/package.json
+++ b/package.json
@@ -8,13 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@harmony-js/core": "^0.1.45",
+    "axios": "^0.19.2",
     "core-js": "^3.6.5",
     "module": "^1.2.5",
     "monaco-editor": "0.20.0",
-    "require-from-string": "^2.0.2",
-    "solc-js": "^1.0.1",
-    "solc-wrapper": "^0.6.3",
-    "string_decoder": "^1.3.0",
+    "solc": "^0.6.10",
     "view-design": "^4.0.0",
     "vue": "^2.6.11"
   },
